fix: improve overflow on x

--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -5,6 +5,7 @@
 html {
     scroll-behavior: smooth;
     scrollbar-gutter: stable;
+    overflow-x: hidden;
 }
 
 body {
