--- a/portfolio/css/section.css
+++ b/portfolio/css/section.css
@@ -18,6 +18,7 @@
     position: sticky;
     top: 0;
     z-index: 5;
+    overflow-x: hidden;
 }
 
 .header-background {
