--- a/portfolio/css/sections/portfolio.css
+++ b/portfolio/css/sections/portfolio.css
@@ -14,6 +14,7 @@
 
 .slider-wrapper {
     position: relative;
+    overflow-x: hidden;
     width: 100%;
 }
 
